# ChangeLog for app-accessibility/caribou
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/caribou/ChangeLog,v 1.39 2015/03/15 13:13:49 pacho Exp $

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> caribou-0.4.17.ebuild:
  x86 stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> caribou-0.4.17.ebuild:
  amd64 stable, bug 534012

*caribou-0.4.17 (18 Feb 2015)

  18 Feb 2015; Pacho Ramos <pacho@gentoo.org> +caribou-0.4.17.ebuild,
  -caribou-0.4.13.ebuild, -caribou-0.4.15.ebuild:
  Version bump, drop old

  19 Dec 2014; Pacho Ramos <pacho@gentoo.org> caribou-0.4.16.ebuild:
  amd64 stable, bug 529964

  18 Dec 2014; Pacho Ramos <pacho@gentoo.org> caribou-0.4.16.ebuild:
  x86 stable, bug 529964

*caribou-0.4.16 (25 Nov 2014)

  25 Nov 2014; Pacho Ramos <pacho@gentoo.org> +caribou-0.4.16.ebuild,
  -caribou-0.4.14.ebuild:
  Version bump, drop old

*caribou-0.4.15 (20 Sep 2014)

  20 Sep 2014; Gilles Dartiguelongue <eva@gentoo.org> +caribou-0.4.15.ebuild:
  Version bump.

*caribou-0.4.14 (04 Sep 2014)

  04 Sep 2014; Pacho Ramos <pacho@gentoo.org> +caribou-0.4.14.ebuild:
  Version bump

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> caribou-0.4.13.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

  23 Feb 2014; Pacho Ramos <pacho@gentoo.org> caribou-0.4.13.ebuild:
  Drop python-2.6 support as pygobject-3.10 did, drop old

  09 Feb 2014; Gilles Dartiguelongue <eva@gentoo.org> -caribou-0.4.12.ebuild:
  Clean up old revision.

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> caribou-0.4.13.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> caribou-0.4.13.ebuild:
  amd64 stable, bug #478252

*caribou-0.4.13 (19 Nov 2013)

  19 Nov 2013; Pacho Ramos <pacho@gentoo.org> +caribou-0.4.13.ebuild,
  -caribou-0.4.10.ebuild, -caribou-0.4.11.ebuild:
  Version bump, drop old