@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST caribou-0.4.16.tar.xz 407456 SHA256 8e70090f9cf64e3b42f6995e3228ab1f38a438687d13e2aa9497925a2a6b1d32 SHA512 ca5cf7b30a042e963c47208b9d071725ddfc8a8c22e084f67fdb037d462c472b17391ecb34be81d210473969ee16d204c0abf8761a017e5b969668739dc0ad9c WHIRLPOOL 7dc6f5a9438cc2d829d833beac8689738a7d2f9ce4d1dcc2d09b503f67c5b2cf3f76f74f15156196deade6a66a0882170dc1fc39f011b69d41a4a8e77243ef06
 DIST caribou-0.4.17.tar.xz 421960 SHA256 31828886b812421dd7217a7aa29043945b8601f3a101507f7e3faa0dc157e516 SHA512 97e773fb44f6bcf827bd8c839cd0669e029ebb377e1c3c777f7acf1cbf262ee58af09ea3e941843bc9519eee3bb59f3c572c04ddea0fb888baac9129c74c8932 WHIRLPOOL b3dee923e7815788655279857c5f6b4a6eac9ad34cffffff0b95f05bcb36ea09882acea5b88e1043b2c806d7a78a52a86772affd2e052588eacec41e76fcbf6b
-EBUILD caribou-0.4.16.ebuild 2393 SHA256 b7e12bb754532f652bdb385f8b39462161bd0501ff0dfdf27da597176139360c SHA512 85a31939a6ebc8ea9b24ba249d85f0d49a3b842457c18e1c4a1e38b03e6cd1eb8658438e31e24948f83ae39df22713c6763064bb8a056232f966444f6dd1d81c WHIRLPOOL 5336526d09dbe8279cb9ab9f531841acaa13ad208a0e929a6749a25c889303641a30051627dce620f0f9135501dd0b56b6d386bbb38fca652315d27cfa68bcb3
+DIST caribou-0.4.18.tar.xz 422580 SHA256 8d94977f3364926600b5f711406e765a9a61aa444609f87a1d435b301e147226 SHA512 cb1dbfa33ef7898b98d05af8ec937f4ecd6ee17148d136186e6bd1e00da97c4146d04e283f9b72a2ac88e8379f8aa4051535a247bce91dd87f32558322fa3720 WHIRLPOOL 5e3dcfb5ccf74d33f698678092468b2236b7cb1e78ba53816221c1c159c1a657ad32f56f2f389075d1ab4fb363ddaf019f0f3d27164b061ae8e9bba47015a56c
 EBUILD caribou-0.4.17.ebuild 2393 SHA256 8df377e7b2a218fc53de47a475a4892215a055605b54683d2d3998179b0f647b SHA512 41e103d281da9e9eebb33c77a85a89f8000a2efec45fd0b087c81960043230feab5db52d96af3a26d9a498604023cc6f1f6e370cbbf8cc744fa565653980fc51 WHIRLPOOL 53c1ac32a9b139d4722996dbfdfda0ed1cf5f58c7b44332def933821e2dd5ff64d8f6dd52a798b3b72b99f105cf8ab1a507ad1509aa057ce5a9438d9d38cce7c
-MISC ChangeLog 5808 SHA256 86cc9178598f8dad328b794a58755afe01b3a250aac003f836cff191ac24e28f SHA512 27065c533b91bbe98dabf226b1d59ee2a5d3447a6f1622115a369ae52852038e07a1655cdccbd7979266c9239b914bbcc5a57bf1d5da9c7921ab711dc4a239ca WHIRLPOOL 91748d60d788c33eb0a6a8a829fc1926f188b2af6b6646c058f2f018e2a2e09c8580632b963004a3153d2cb1255cd38af41492ad046efd6cd543db42629ffa91
+EBUILD caribou-0.4.18.ebuild 2418 SHA256 1e968e84fa7280c97b81bded78d35f7b3840f8952e3436a954713895bc4475c0 SHA512 e0d60ed782e1c5c8ecb7817976076471a8c72215c4171b64bbcef7e98d6b4b83029220564e13a3890e06bec9a05134e97070fe5adf563f09e61c206d14626b59 WHIRLPOOL bc9fd0ec366edbf23d24af98b0f89dfc41b31803ec461f207200b077fab88bc420eac3fd5a5da28e2a7a346f04670548844fe90c7a0ea290a9412f350d76f921
+MISC ChangeLog 5961 SHA256 a2b692b155cbfb0eb27638c1b4f0a589eda9ccb6987bfe3b85101f2b644f16c0 SHA512 5da8dd41266af3b69a44a7574e21d261b4088a3eff2eeeff2a7da43764b6b5d15365e1fdbe117e755886e67f5c1063ecb3518caa03e55084898b18e515395564 WHIRLPOOL def30bc81fc8a4b18f809935cc07b5eda28a88e4264c84f2381c01c072e95066c4b78cd8543b705b6ba78b03cf991227bd2f78a0fd5d5d0c19bc189fb13520ee
 MISC metadata.xml 591 SHA256 8c557bc4420494a9164aba4827b2ae7ff5fa33c4fbbee31e586cc90a5887dcf8 SHA512 79d99b9578739bf6fb6f093e9a92af05c895f517c22d6160dc229281d52dfc670a8c43270dff4a1772ea98e70b247d553aa226fb07e8c0793949c088e0fc2413 WHIRLPOOL 4e7d730ed334f16b70dbe939bed42a548010abee47c9024133125e81f351e603389723fc385794451568dcc1366e7b0602c57fc79010786b7109993a1163491d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUFhX8ACgkQCaWpQKGI+9TJvgCdGQGSfLxZYfmikRcWd+Ph/Wx+
-AMgAnja9mwrUsAxPCUXF3YT+lXpogx8t
-=rufB
+iEYEAREIAAYFAlUWbasACgkQCaWpQKGI+9RTJgCfTnqAsOeQiiJMYZ+bLCnYoVj8
+IMUAni+l+v/PwyKhQcDs14zWSNHBINHE
+=tozk
 -----END PGP SIGNATURE-----
