@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare test unpack
+DEPEND=app-accessibility/at-spi2-core >=dev-python/pygobject-2.90.3:3[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=x11-libs/gtk+-3:3[introspection] x11-libs/gtk+:2 >=dev-libs/gobject-introspection-0.10.7:= dev-libs/libgee:0.8 dev-libs/libxml2 >=media-libs/clutter-1.5.11:1.0[introspection] x11-libs/libX11 x11-libs/libxklavier x11-libs/libXtst dev-libs/libxslt >=dev-util/intltool-0.35.5 virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4
+DESCRIPTION=Input assistive technology intended for switch and pointer users
+EAPI=5
+HOMEPAGE=https://wiki.gnome.org/Projects/Caribou
+IUSE=python_targets_python2_7
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
+LICENSE=LGPL-2.1
+RDEPEND=app-accessibility/at-spi2-core >=dev-python/pygobject-2.90.3:3[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=x11-libs/gtk+-3:3[introspection] x11-libs/gtk+:2 >=dev-libs/gobject-introspection-0.10.7:= dev-libs/libgee:0.8 dev-libs/libxml2 >=media-libs/clutter-1.5.11:1.0[introspection] x11-libs/libX11 x11-libs/libxklavier x11-libs/libXtst dev-libs/glib[dbus] >=dev-python/pyatspi-2.1.90[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=gnome-base/gsettings-desktop-schemas-3 gnome-base/librsvg:2 sys-apps/dbus
+REQUIRED_USE=|| ( python_targets_python2_7 )
+SLOT=0
+SRC_URI=mirror://gnome/sources/caribou/0.4/caribou-0.4.18.tar.xz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	c77a2c791ae15742c3c796344e279142	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=a6dbfcf500af1ad2dde2e57488d4276e
