@@ -1,6 +1,12 @@
 # ChangeLog for app-accessibility/caribou
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/caribou/ChangeLog,v 1.39 2015/03/15 13:13:49 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/caribou/ChangeLog,v 1.40 2015/03/28 09:00:26 pacho Exp $
+
+*caribou-0.4.18 (28 Mar 2015)
+
+  28 Mar 2015; Pacho Ramos <pacho@gentoo.org> +caribou-0.4.18.ebuild,
+  -caribou-0.4.16.ebuild:
+  Version bump, drop old
 
   15 Mar 2015; Pacho Ramos <pacho@gentoo.org> caribou-0.4.17.ebuild:
   x86 stable, bug 534012
